--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+	{
+		"key": "dbln",
+		"value": "%7B%22100050869934224%22%3A%22vxszinue%22%7D",
+		"domain": "facebook.com",
+		"path": "/login/device-based/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "datr",
+		"value": "fJHiaMSrZdVqJO-I9hoFt1Ps",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "sb",
+		"value": "fJHiaIjad9uEpBpuIuqRxJ2S",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "m_pixel_ratio",
+		"value": "3.25",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "wd",
+		"value": "370x820",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "c_user",
+		"value": "100050869934224",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "xs",
+		"value": "45%3AMV6uVYfGjcwOyw%3A2%3A1759678960%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "fr",
+		"value": "0sTfF8WBMEFWWWCBn.AWczA02y6YkRSiVD-SHkkV0N29CZaq913PZdsPuFnK6VEYIXVv0.Bo4pF8..AAA.0.0.Bo4pH3.AWdrvKXEuJk6mnT-EgXQR_7EBos",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "locale",
+		"value": "en_US",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "pas",
+		"value": "100050869934224%3AnRj7AzdowO",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2944%3Btimestamp%3A1759678967",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "101729383%3BT%3A29327983",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B685x370x3.25",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-10-05T15:47:39.087Z",
+		"lastAccessed": "2025-10-05T15:47:39.087Z"
+	}
+]
